--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
+    "seed": "tsx src/db/seed.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,15 +17,19 @@
   "license": "ISC",
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@vercel/postgres": "^0.5.1",
+    "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.29.3",
     "embla-carousel-react": "^8.1.8",
-    "next": "14.1.0",
+    "next": "^14.2.5",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
@@ -41,7 +46,8 @@
     "postcss": "^8.4.41",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.8",
+    "tailwindcss": "^3.4.9",
+    "tsx": "^4.17.0",
     "typescript": "^5"
   }
 }
