--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
@@ -27,6 +30,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.29.3",
     "embla-carousel-react": "^8.1.8",
+    "framer-motion": "^11.3.24",
     "next": "^14.2.5",
     "react": "^18",
     "react-day-picker": "^8.10.1",
