--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -36,6 +38,7 @@
     "drizzle-orm": "^0.29.3",
     "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.24",
+    "lucide-react": "^0.436.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
